changed '.formatted()' to 'String.format()'